# rustic_boards

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
src/: boards.rs  constants.rs  error.rs  lib.rs  links.rs  main.rs  notes.rs  prompt.rs  subtasks.rs  tasks.rs  utils.rs
