[package]
name = "rustic_boards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
chrono = "0.4"
cli-table = "0.4"
home = "0.5"
inquire = { version = "0.6", features = ["date", "editor"] }
serde = { version = "1.0", features = ["derive"] }
