[package]
name = "rustic_boards"
version = "0.1.1"
edition = "2021"
authors = ["Tapas Das <dlaststark@gmail.com>"]
description = "Rustic Boards is a sleek and powerful CLI-based Kanban board application built with Rust, combining performance and usability for seamless task management."
readme = "README.md"
repository = "https://github.com/oss-rust-github-io/rustic_boards"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
chrono = "0.4"
cli-table = "0.4"
home = "0.5"
inquire = { version = "0.6", features = ["date", "editor"] }
serde = { version = "1.0", features = ["derive"] }
